...
                    onRefreshPressed: _refresh,
                    stats: [
                      DashboardStatItem(
                        icon: Icons.business,
                        value:
                            '${institutionProvider.paginationInfo?.total ?? 0}',
                        label: 'Instituciones',
                      ),
                      DashboardStatItem(
                        icon: Icons.people,
                        value: '${userProvider.totalUsersFromPagination}',
                        label: 'Usuarios',
                      ),
                    ],
                  ),
                  SizedBox(height: spacing.lg),

                  // Título de sección
...
